[package]
name = "pangocairo"
documentation = "http://gtk-rs.org/docs/pangocairo/"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["pango", "cairo", "gtk-rs", "gnome"]
readme = "README.md"
version = "0.9.0"
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/gtk-rs/pangocairo"
license = "MIT"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/pangocairo", service = "github" }
travis-ci = { repository = "gtk-rs/pangocairo" }

[features]
dox = ["glib/dox", "pango/dox", "cairo-rs/dox"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/embed-lgpl-docs"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1.3"
optional = true

[dependencies]
glib = { git = "https://github.com/cthorner/glib", branch = "0.9.0-custom", version = "0.9.0" }
glib-sys = { git = "https://github.com/cthorner/sys", branch = "crate-custom", version = "0.9.1" }
gobject-sys = { git = "https://github.com/cthorner/sys", branch = "crate-custom", version = "0.9.1" }
cairo-rs = { git = "https://github.com/cthorner/cairo", branch="0.8-custom", version="0.8.0" }
cairo-sys-rs = { git = "https://github.com/cthorner/cairo", branch="0.8-custom", vversion="0.9.1" }
pangocairo-sys = { git = "https://github.com/cthorner/sys", branch = "crate-custom", version = "0.10.1" }
pango-sys = { git = "https://github.com/cthorner/sys", branch = "crate-custom", version = "0.9.1" }
pango = { git = "https://github.com/cthorner/pango", branch = "crate-custom", version = "0.8.0" }
libc = "0.2"
bitflags = "1.0"
# glib = "0.9.0"
# glib-sys = "0.9.1"
# gobject-sys = "0.9.1"
# cairo-sys-rs = "0.9.1"
# cairo-rs = "0.8.0"
# pangocairo-sys = "0.10.1"
# pango-sys = "0.9.1"
# pango = "0.8.0"

[dev-dependencies]
gir-format-check = "^0.1"
